[gd_scene load_steps=38 format=2]

[ext_resource path="res://Enemy/WanderController.tscn" type="PackedScene" id=1]
[ext_resource path="res://Hitbox dan Hurtbox/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=3]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemy/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemy/HitboxEnemy.gd" type="Script" id=6]
[ext_resource path="res://Hitbox dan Hurtbox/SoftCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemy/EnemyMove_Spritesheet.png" type="Texture" id=8]
[ext_resource path="res://UI/Gamer.ttf" type="DynamicFontData" id=10]

[sub_resource type="Animation" id=21]
resource_name = "IdleDown"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=22]
resource_name = "IdleLeft"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=23]
resource_name = "IdleRight"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=24]
resource_name = "IdleUp"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=29]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=25]
resource_name = "RunDown"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 9, 0, 11, 8, 11, 0 ]
}

[sub_resource type="Animation" id=27]
resource_name = "RunLeft"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 16, 1, 18, 19, 18, 1 ]
}

[sub_resource type="Animation" id=26]
resource_name = "RunRight"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 12, 2, 14, 15, 14, 2 ]
}

[sub_resource type="Animation" id=28]
resource_name = "RunUp"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 4, 5, 3, 7, 6, 7, 3 ]
}

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "IdleUp"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "IdleRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=34]
blend_point_0/node = SubResource( 30 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 31 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 32 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 33 )
blend_point_3/pos = Vector2( 1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=41]
animation = "RunDown"

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "RunUp"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "RunRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=35]
blend_point_0/node = SubResource( 40 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 41 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 42 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 43 )
blend_point_3/pos = Vector2( 1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachine" id=38]
states/Idle/node = SubResource( 34 )
states/Idle/position = Vector2( 299, 60.3333 )
states/Run/node = SubResource( 35 )
states/Run/position = Vector2( 489.667, 59.4444 )
transitions = [ "Idle", "Run", SubResource( 44 ), "Run", "Idle", SubResource( 45 ) ]
start_node = "Idle"
graph_offset = Vector2( 0, -69.3128 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=39]

[sub_resource type="CapsuleShape2D" id=10]
radius = 8.0
height = 0.0

[sub_resource type="CircleShape2D" id=19]
radius = 125.064

[sub_resource type="CircleShape2D" id=20]
radius = 5.0

[sub_resource type="DynamicFont" id=47]
font_data = ExtResource( 10 )

[sub_resource type="RectangleShape2D" id=46]
extents = Vector2( 4.5, 16.5 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 8 )
offset = Vector2( 0, -20 )
hframes = 20

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleDown = SubResource( 21 )
anims/IdleLeft = SubResource( 22 )
anims/IdleRight = SubResource( 23 )
anims/IdleUp = SubResource( 24 )
anims/RESET = SubResource( 29 )
anims/RunDown = SubResource( 25 )
anims/RunLeft = SubResource( 27 )
anims/RunRight = SubResource( 26 )
anims/RunUp = SubResource( 28 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 38 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 39 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Run/blend_position = Vector2( 0, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1, 0.679999 )
shape = SubResource( 10 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8

[node name="CollisionPolygon2D" parent="Hurtbox" index="0"]
polygon = PoolVector2Array( -8, 8, 6, 8, 11, 1, 11, -17, 11, -36, 7, -40, -5, -40, -10, -32, -11, -29, -11, 3 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 8

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( 0, -16 )
shape = SubResource( 19 )

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 20 )

[node name="WanderController" parent="." instance=ExtResource( 1 )]

[node name="Line2D" type="Line2D" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = -41.0
margin_top = -57.0
margin_right = 40.0
margin_bottom = -43.0
custom_colors/font_color = Color( 0.709804, 0, 0, 1 )
custom_fonts/font = SubResource( 47 )
text = "HP : 99 ATK: 99"
align = 1

[node name="HitboxEnemy" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxEnemy"]
position = Vector2( 0.5, -16.5 )
shape = SubResource( 46 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="death" from="Stats" to="." method="_on_Stats_death"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="SoftCollision"]
